--- a/protected/modules/yupe/views/assets/css/styles.css
+++ b/protected/modules/yupe/views/assets/css/styles.css
@@ -35,7 +35,7 @@ div#page {
 
 #overall-wrap {
     min-height: 100%;
-    margin: 0 auto -141px;
+    margin: 0 auto -121px;
 }
 .navbar-fixed-top {
     border-bottom: 1px solid #FF9600;
@@ -46,7 +46,7 @@ footer {
     text-align: center;
 
     height: 75px;
-    padding: 20px 0px 45px;
+    padding: 20px 0 25px;
 
     border-top: 1px solid #E5E5E5;
 
