--- a/protected/modules/shop/views/assets/css/shop-front.css
+++ b/protected/modules/shop/views/assets/css/shop-front.css
@@ -196,3 +196,16 @@ ul#payment-methods li h3, ul#payment-methods li .description {
     display: block;
     margin-left: 25px;
 }
+
+.notifyjs-wrapper {
+    font-size: 14px;
+}
+
+.coupons .alert .close {
+    float: none;
+    top: 0;
+}
+
+.coupons .alert {
+    margin-bottom: 0;
+}
