--- a/protected/modules/yupe/views/assets/css/shortcuts.css
+++ b/protected/modules/yupe/views/assets/css/shortcuts.css
@@ -11,7 +11,7 @@
     display: inline-block;
     padding: 12px 0;
     margin: 0 5px 1em;
-    vertical-align: middle;
+    vertical-align: top;
     text-decoration: none;
     background: #F3F3F3;
     background-color: #f8f8f8;
