--- a/protected/modules/yupe/views/assets/css/styles.css
+++ b/protected/modules/yupe/views/assets/css/styles.css
@@ -1,23 +1,153 @@
 /* General Style */
-.error .redactor_box { border: 1px rgb(149, 59, 57) solid; -webkit-box-shadow: 0 0 6px rgb(213, 147, 146); -moz-box-shadow: 0 0 6px #d59392; box-shadow: 0 0 6px rgb(213, 147, 146); }
+.error .redactor_box {
+    border: 1px rgb(149, 59, 57) solid;
+    -webkit-box-shadow: 0 0 6px rgb(213, 147, 146);
+    -moz-box-shadow: 0 0 6px #d59392;
+    box-shadow: 0 0 6px rgb(213, 147, 146);
+}
+
 html,
 body {
     height: 100%;
-    line-height: 18px;
-    color: #454545;
-    font-size: 13px;
     min-width: 960px !important;
 }
-#content .form {
-    margin-left: 18px;
-}
-div#page {
-    padding-top: 50px;
-    padding-bottom: 10px;
+
+#overall-wrap {
+    min-height: 100%;
+    margin: 0 auto -91px;
 }
 
-#page [class*='icon-'] {
+.navbar-fixed-top {
+    border-bottom: 1px solid #FF9600;
+    min-width: 960px !important;
+}
+
+footer {
+    clear: both;
+    text-align: center;
+    height: 91px;
+    padding: 5px 0 5px;
+    border-top: 1px solid #E5E5E5;
+    line-height: 18px;
+    color: #9D9D9D;
+    font-size: 12px;
+    background: #F3F8F8;
+}
+
+#footer-guard {
+    height: 120px;
+}
+
+div#page {
+    padding-top: 60px;
+    padding-bottom: 50px;
+}
+
+.navbar-fixed-top {
+    border-bottom: 2px solid #FF9600;
+}
+
+.navbar-brand {
+    padding-top: 7px;
+}
+
+.nav-list > li {
+    margin: 0 15px;
+}
+
+.nav-list > .active > a, .nav-list > .active > a:hover, .nav-list > .active > a:focus {
+    background-color: #0088CC;
+    color: #FFFFFF;
+}
+
+.nav li.nav-header, .nav-list li.nav-header {
+    color: #999999;
+    margin: 0;
+}
+
+.nav-list > li > a {
+    color: #000;
+    margin: 0 -15px;
+}
+
+.nav-header, .nav-header a {
+    display: block;
+    padding: 3px 15px;
+    font-size: 11px;
+    font-weight: bold;
+    line-height: 20px;
+
+    text-transform: uppercase;
+}
+
+.nav-header a {
+    pointer-events: none;
+    cursor: default;
+    margin: 0 -15px;
+    color: inherit;
+}
+
+/* fix submenu bootstrap 3 */
+.dropdown-submenu {
+    position: relative;
+}
+
+.dropdown-submenu > .dropdown-menu {
+    top: 0;
+    left: 100%;
+    margin-top: -6px;
+    margin-left: -1px;
+    -webkit-border-radius: 0 6px 6px 6px;
+    -moz-border-radius: 0 6px 6px 6px;
+    border-radius: 0 6px 6px 6px;
+}
+
+.dropdown-submenu:hover > .dropdown-menu {
+    display: block;
+}
+
+.dropdown-submenu > a:after {
+    display: block;
+    content: " ";
+    float: right;
+    width: 0;
+    height: 0;
+    border-color: transparent;
+    border-style: solid;
+    border-width: 5px 0 5px 5px;
+    border-left-color: #cccccc;
+    margin-top: 5px;
+    margin-right: -10px;
+}
+
+.dropdown-submenu:hover > a:after {
+    border-left-color: #ffffff;
+}
+
+.dropdown-submenu.pull-left {
+    float: none;
+}
+
+.dropdown-submenu.pull-left > .dropdown-menu {
+    left: -100%;
+    margin-left: 10px;
+    -webkit-border-radius: 6px 0 6px 6px;
+    -moz-border-radius: 6px 0 6px 6px;
+    border-radius: 6px 0 6px 6px;
+}
+
+table .button-column {
+    white-space: nowrap;
+}
+
+table [class*='icon-'] {
     color: #333;
+    padding-left: 3px;
+    text-decoration: none;
+}
+
+.table-vmiddle td {
+    vertical-align: middle;
 }
 
 #page [class*='icon-'].icon-white {
@@ -28,137 +158,18 @@ div#page {
     color: inherit;
 }
 
-.grid-view [class*='icon-'] {
-    padding-left: 3px;
-    text-decoration: none;
+.popover {
+    min-width: 300px;
 }
 
-#overall-wrap {
-    min-height: 100%;
-    margin: 0 auto -93px;
-}
-.navbar-fixed-top {
-    border-bottom: 1px solid #FF9600;
-    min-width: 960px !important;
-}
-footer {
-    clear: both;
-    text-align: center;
-
-    height: 75px;
-    padding: 12px 0 15px;
-
-    border-top: 1px solid #E5E5E5;
-
-    line-height: 18px;
-    color: #9D9D9D;
-    font-size: 12px;
-    background: #F3F8F8;
-}
-#footer-guard {
-    height: 120px;
-}
-.nav-list.nav-header ul {
-    list-style: none !important;
-    margin-left: 10px !important;
-    text-transform: none;
-}
-.wide select,
-.wide input {
-    display: inline-block !important;
-}
-.wide select {
-    width: 100% !important;
-}
-.wide input[type=text]:not([class*="span"]),
-.wide textarea {
-    width: 99% !important;
-}
-.wide .help-inline {
-    margin-top: 27px;
-}
-.table-vmiddle td {
-    vertical-align: middle;
+.popover-title {
+    white-space: nowrap;
 }
 
-.sidebar-nav {
-    padding: 9px 0;
-}
-.dropdown-menu li {
-    position: relative;
-}
-.dropdown-menu .sub-menu {
-    left: 100%;
-    position: absolute;
-    top: 0;
-    visibility: hidden;
-    margin-top: -6px;
-}
-.dropdown-menu li:hover .sub-menu {
-    visibility: visible;
-}
-.navbar .sub-menu:before {
-    border-top: 7px solid transparent;
-    border-left: none;
-    border-right: 7px solid rgba(0, 0, 0, 0.2);
-    border-bottom: 7px solid transparent;
-    top: 10px;
-    left: -7px;
-}
-.navbar .sub-menu:after {
-    border-top: 6px solid transparent;
-    border-left: none;
-    border-right: 6px solid #fff;
-    border-bottom: 6px solid transparent;
-    top: 11px;
-    left: -6px;
-}
-.dropdown-menu li:hover > [class^="nav-header"] {
-    color: white;
-    text-decoration: none;
-    background-color: #08C;
-}
-.dropdown .dropdown-menu .nav-header {
-    margin-left: 0;
-    margin-right: 0;
-}
-pre .label{
-    white-space: normal !important;
-}
-/* NavBar Style */
-.navbar .brand {
-    padding:0 5px 0 15px;
-    height:40px;
-    width:40px;
-}
-.navbar .brand img {
-    margin-top:1px;
-}
-.navbar .nav > li > a {
-    padding: 10px 8px;
-}
-.navbar .divider-vertical {
-    margin:0;
-}
-/* News Style */
-.news_block {
-    margin-bottom: 20px;
-}
-.news_block p img {
-    margin-right: 10px;
-    border: none;
-    display: block;
+.popover-content, .popover-content .body {
+    width: 100%;
 }
 
-.well .form-actions {
-    padding-bottom: 0;
-    margin-bottom: 0;
-}
-
-.table .button-column {
-	white-space: nowrap;
-}
-
-.module-errors-accordion .alert {
-	margin-bottom: 0;
+.datepicker {
+    z-index: 100 !important;
 }
