перевод модуля menu на yiibooster 4

--- a/protected/modules/yupe/views/assets/css/styles.css
+++ b/protected/modules/yupe/views/assets/css/styles.css
@@ -173,3 +173,8 @@ table [class*='icon-'] {
 .datepicker {
     z-index: 100 !important;
 }
+
+.ui-sortable tr {
+    cursor: move;
+    background: #fff;
+}
