--- a/themes/default/web/css/yupe.css
+++ b/themes/default/web/css/yupe.css
@@ -699,7 +699,6 @@ a.reply {
     padding-right: 10px;
     position: relative;
     width: 100%;
-    left: -5px;
     border-bottom: 1px solid #e2e2e2;
     content: "";
 }
@@ -716,9 +715,9 @@ a.reply {
     padding-right: 10px;
     position: relative;
     width: 100%;
-    left: -5px;
     background-color: #f5f5f5;
     border-bottom: 1px solid #e4e4e4;
+    margin: 10px 0 0 0;
 }
 
 .posts-list-block-tags *, .posts-list-block-tags-comments a:hover {
