--- a/protected/modules/docs/views/assets/css/docs.css
+++ b/protected/modules/docs/views/assets/css/docs.css
@@ -1,4 +1,12 @@
+html, body {
+    min-width: 0 !important;
+}
+
 .accordion-inner {
     max-height: 400px;
     overflow: auto;
+}
+
+img {
+    max-width: 100%;
 }
