#1675 основная картинка товара в таблице товаров

--- a/protected/modules/store/views/assets/css/store-backend.css
+++ b/protected/modules/store/views/assets/css/store-backend.css
@@ -2,6 +2,11 @@
     display: none !important;
 }
 
+.product-image {
+    float: left;
+    margin: 4px 20px 4px;
+}
+
 .product-image label {
     display: inline-block;
 }
