--- a/protected/modules/install/views/assets/css/install.css
+++ b/protected/modules/install/views/assets/css/install.css
@@ -24,34 +24,6 @@
     clear: both;
 }
 
-.installContent .installMenu .disabled > a {
-    color: #000;
-}
-
-.installContent .installMenu .current, .installContent .installMenu .current a {
-    color: #fff;
-    background-color: #0088cc;
-}
-
-.installContent .installMenu .current:hover {
-    background-color: #0088cc;
-}
-
-.installContent .installMenu .current a:hover {
-    text-decoration: underline;
-    background-color: #0088cc;
-}
-
-.installContent .installMenu .current i {
-    top: -1px;
-    position: relative;
-}
-
-.installContent .installMenu .disabled i {
-    top: -1px;
-    position: relative;
-}
-
 .installMenu .nav-list > li > a {
     padding: 5px 15px;
 }
@@ -66,4 +38,10 @@
 
 li.nav-header, li.nav-header a {
     padding: 5px 15px;
+}
+
+#log-content {
+    margin-top: 20px;
+    font-size: 10px;
+    line-height: 1.2;
 }
