- fixed (overridden) position of "redactor" tooltip

--- a/protected/modules/yupe/views/assets/css/styles.css
+++ b/protected/modules/yupe/views/assets/css/styles.css
@@ -281,3 +281,9 @@ input.form-control[type="file"] {
 .pager-container .pagination {
     margin: 26px 0 0 0;
 }
+
+/* Override redactor styles */
+
+.redactor-toolbar-tooltip {
+    z-index: 1055;
+}
