fix #1815 Добавил поле «статус». Убрал обязательное поле контент.

--- a/protected/modules/yupe/views/assets/css/styles.css
+++ b/protected/modules/yupe/views/assets/css/styles.css
@@ -222,7 +222,7 @@ table .button-column {
     white-space: nowrap;
 }
 
-.button-column a {
+.button-column a, td.toggle-column a {
     color: #333;
     text-decoration: none;
 }
