Переработка верхнего меню для корректного отображения на маленьких экранах
Реализовано:
- уменьшены отступы пунктов меню слева и справа
- убрано "'collapse' => true," , так как по умолчанию true
- выводиться дополнительное меню только с пустым label. Данное меню используется для отображения на экранах с шириной 768px - 992px

--- a/protected/modules/yupe/views/assets/css/styles.css
+++ b/protected/modules/yupe/views/assets/css/styles.css
@@ -301,3 +301,12 @@ input.form-control[type="file"] {
 .grid-toolbar {
     height: 40px;
 }
+
+/*navbar*/
+.navbar-default .navbar-nav>li>a {
+    padding: 15px 5px;
+}
+
+.navbar-brand {
+    padding: 7px 5px 15px 15px;
+}
