--- a/themes/default/web/css/store-frontend.css
+++ b/themes/default/web/css/store-frontend.css
@@ -12,11 +12,17 @@
 }
 
 .col-item .photo {
-    text-align: center;
+    position: relative;
+    height: 190px;
 }
 
 .col-item .photo img {
-    vertical-align: middle;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
     max-height: 100%;
     max-width: 100%;
 }
