--- a/themes/shop/web/styles/common.css
+++ b/themes/shop/web/styles/common.css
@@ -1802,7 +1802,7 @@ a {
 }
 
 #fancybox-loading, .fancybox-close, .fancybox-next span, .fancybox-prev span {
-    background-image: url(../js/libs/fancybox/source/fancybox_sprite.png)
+    background-image: url(../images/fancybox_sprite.png)
 }
 
 #fancybox-loading {
@@ -1820,7 +1820,7 @@ a {
 #fancybox-loading div {
     width: 44px;
     height: 44px;
-    background-image: url(../js/libs/fancybox/source/fancybox_loading.gif);
+    background-image: url(../images/fancybox_loading.gif);
     background-position: center center;
     background-repeat: no-repeat
 }
@@ -1910,7 +1910,7 @@ a {
     overflow: hidden;
     display: none;
     z-index: 8010;
-    background-image: url(../js/libs/fancybox/source/fancybox_overlay.png)
+    background-image: url(../images/fancybox_overlay.png)
 }
 
 .fancybox-overlay-fixed {
@@ -4146,12 +4146,12 @@ p.wysiwyg__lead {
 
 @media only screen and (min-device-pixel-ratio: 1.5) {
     #fancybox-loading, .fancybox-close, .fancybox-next span, .fancybox-prev span {
-        background-image: url(../js/libs/fancybox/source/fancybox_sprite@2x.png);
+        background-image: url(../images/fancybox_sprite@2x.png);
         background-size: 44px 152px
     }
 
     #fancybox-loading div {
-        background-image: url(../js/libs/fancybox/source/fancybox_loading@2x.gif);
+        background-image: url(../images/fancybox_loading@2x.gif);
         background-size: 24px 24px
     }
 }
