--- a/themes/shop/web/styles/common.css
+++ b/themes/shop/web/styles/common.css
@@ -872,6 +872,15 @@ a {
     padding: 10px
 }
 
+.cart-mini__base-price {
+    font-size: 12px;
+    color: #555;
+}
+
+.cart-mini .product-price {
+    font-size: 14px;
+}
+
 .cart-mini__link {
     color: #22b5cd
 }
