fix #2302 Flash-сообщения в контактах

--- a/themes/shop/web/styles/common.css
+++ b/themes/shop/web/styles/common.css
@@ -4274,3 +4274,36 @@ label.error, .errorMessage, .text-error {
 .callback-request.active, .callback-request.toggle-active {
     display: block
 }
+
+.alert {
+    border-width: 1px;
+    border-style: solid;
+    border-radius: 5px;
+    padding: 20px;
+}
+
+.alert-error {
+    color: #a94442;
+    background-color: #f2dede;
+    border-color: #ebccd1;
+}
+
+.alert-info {
+    color: #31708f;
+    background-color: #d9edf7;
+    border-color: #bce8f1;
+}
+
+.alert-success {
+    color: #3c763d;
+    background-color: #dff0d8;
+    border-color: #d6e9c6;
+}
+
+.alert-warning {
+    color: #8a6d3b;
+    background-color: #fcf8e3;
+    border-color: #faebcc;
+}
+
+
