fix #2332 Верстка блока товара

--- a/themes/shop/web/styles/common.css
+++ b/themes/shop/web/styles/common.css
@@ -3239,6 +3239,8 @@ a {
 }
 
 .product-vertical-extra__top {
+    display: block;
+    overflow: hidden;
     margin: 0 15px;
     padding: 14px 0;
     border-top: 1px solid #dbdbdb
