--- a/protected/modules/yupe/views/assets/css/styles.css
+++ b/protected/modules/yupe/views/assets/css/styles.css
@@ -450,3 +450,23 @@ input.form-control[type="file"] {
 .comments-item-child .comments-item-date {
     background-position: 0 -29px;
 }
+
+.preview-image-wrapper {
+    display: inline-block;
+    position: relative;
+}
+
+.preview-image-wrapper button {
+    opacity: 0.9;
+}
+
+.preview-image-wrapper .dropdown-menu {
+    min-width: 350px;
+}
+
+.image-settings {
+    position: absolute;
+    top: 10px;
+    right: 5px;
+    z-index: 99;
+}
