--- a/protected/modules/install/views/assets/css/install.css
+++ b/protected/modules/install/views/assets/css/install.css
@@ -1,6 +1,8 @@
-/*.navbar-inner .container-fluid {*/
-/*color: #999999;*/
-/*}*/
+#yupestore {
+    border:none;
+    height: 500px;
+    width: 300px;
+}
 
 #stepName {
     color: #999999;
