--- a/themes/default/web/css/main.css
+++ b/themes/default/web/css/main.css
@@ -414,31 +414,12 @@ span.label a {
 
 }
 
-/* Portrait tablet to landscape and desktop */
-@media (min-width: 768px) and (max-width: 979px) {
-    body {
-        padding-top: 0;
-    }
-
-    .navbar .brand {
-        margin-left: 30px;
-    }
-}
-
 /* Landscape phone to portrait tablet */
 @media (max-width: 767px) {
-    body {
-        padding-top: 0;
+    .navbar {
+        position: fixed;
     }
-
-    .navbar .brand {
-        margin-left: 20px;
-    }
-}
-
-/* Landscape phones and down */
-@media (max-width: 480px) {
-    .navbar .brand {
+    .navbar-brand {
         margin-left: 20px;
     }
 }
