--- a/protected/modules/gallery/views/assets/css/gallery.css
+++ b/protected/modules/gallery/views/assets/css/gallery.css
@@ -1,7 +1,3 @@
-.image-changes {
-
-}
-
 .image:not(.img-polaroid) .image-changes {
     position: absolute;
 }
@@ -11,10 +7,70 @@ ul.gallery-thumbnails {
     padding: 0;
 }
 
-.gallery-thumbnail {
-    margin-bottom: 25px;
+.image-wrapper {
+    float: left;
+    position: relative;
+    width: 190px;
+    margin: 0 15px 30px 15px;
+    text-align: center;
 }
 
-.gallery-thumbnail a {
-    color: #000000;
+.gallery-thumbnail {
+    display: block;
+    height: 190px;
+    margin-bottom: 7px;
+}
+
+.ribbon {
+    position: absolute;
+    right: -5px;
+    top: -5px;
+    z-index: 1;
+    overflow: hidden;
+    width: 75px;
+    height: 75px;
+    text-align: right;
+}
+
+.ribbon span {
+    font-size: 10px;
+    font-weight: bold;
+    color: #FFF;
+    text-transform: uppercase;
+    text-align: center;
+    line-height: 20px;
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    width: 100px;
+    display: block;
+    background: #79A70A;
+    background: linear-gradient(#9BC90D 0%, #79A70A 100%);
+    box-shadow: 0 3px 10px -5px rgba(0, 0, 0, 1);
+    position: absolute;
+    top: 19px;
+    right: -21px;
+}
+
+.ribbon span::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 100%;
+    z-index: -1;
+    border-left: 3px solid #79A70A;
+    border-right: 3px solid transparent;
+    border-bottom: 3px solid transparent;
+    border-top: 3px solid #79A70A;
+}
+
+.ribbon span::after {
+    content: "";
+    position: absolute;
+    right: 0;
+    top: 100%;
+    z-index: -1;
+    border-left: 3px solid transparent;
+    border-right: 3px solid #79A70A;
+    border-bottom: 3px solid transparent;
+    border-top: 3px solid #79A70A;
 }
