В форме редактирования новостей поле "Дата" перекрывало поле "Статус"

--- a/protected/modules/yupe/views/assets/css/styles.css
+++ b/protected/modules/yupe/views/assets/css/styles.css
@@ -474,3 +474,7 @@ input.form-control[type="file"] {
 .btn-group .btn {
     margin-left: -1px;
 }
+
+#news-form .ct-form-control {
+    min-width: 100px;
+}
