--- a/protected/modules/yupe/views/assets/css/styles.css
+++ b/protected/modules/yupe/views/assets/css/styles.css
@@ -1,6 +1,11 @@
 /*------------------------------------------------------------------
 [ Shortcuts / .shortcuts ]
 */
+
+.form-control {
+    border-radius: 0px;
+}
+
 .shortcuts {
     text-align: left;
 }
@@ -304,6 +309,7 @@ input.form-control[type="file"] {
 
 .grid-toolbar {
     height: 40px;
+    padding-left: 0px;
 }
 
 /*navbar*/
