--- a/protected/modules/yupe/views/assets/css/flags.css
+++ b/protected/modules/yupe/views/assets/css/flags.css
@@ -927,7 +927,7 @@
     background-position: -64px -154px
 }
 
-.iconflags.iconflags-ua {
+.iconflags.iconflags-uk_ua {
     background-position: -80px -154px
 }
 
