--- a/themes/default/web/css/flags.css
+++ b/themes/default/web/css/flags.css
@@ -931,7 +931,7 @@
     background-position: -80px -154px
 }
 
-.iconflags.iconflags-uk {
+.iconflags.iconflags-uk_ua {
     background-position: -80px -154px
 }
 
