--- a/themes/shop/web/styles/common.css
+++ b/themes/shop/web/styles/common.css
@@ -4173,7 +4173,8 @@ p.wysiwyg__lead {
 
 .notifications {
     display: none;
-    position: fixed
+    position: fixed;
+    z-index: 9999
 }
 
 .notifications.top-right {
@@ -4183,7 +4184,6 @@ p.wysiwyg__lead {
 
 .notifications > div {
     position: relative;
-    z-index: 9999;
     background-color: #22b5cd;
     color: #fff;
     padding: 10px 15px;
