--- a/themes/default/web/css/flags.css
+++ b/themes/default/web/css/flags.css
@@ -927,7 +927,7 @@
     background-position: -64px -154px
 }
 
-.iconflags.iconflags-ua {
+.iconflags.iconflags-uk {
     background-position: -80px -154px
 }
 
